@@ -1171,3 +1171,4 @@ you can see following result if build success.
 25、[打造基于Flink Table API的机器学习生态](https://t.zsxq.com/FyzvRne)
 
 26、[流处理系统的相关 paper](https://t.zsxq.com/rVBQFI6)
+--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED
